Checkstyle fixes